1.add member-service-consumer-80 2.抽取公用服务模块 add e-commerce-center-common-api 3.其他服务模块使用公用服务模块

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     <!-- 列出了父项目/父工程聚合管理的子模块/项目 -->
     <modules>
         <module>member-service-provider-10000</module>
+        <module>member-service-consumer-80</module>
+        <module>e-commerce-center-common-api</module>
     </modules>
 
     <!-- 表明是一个父工程，聚合管理其他模块 -->
