--- a/member-service-consumer-80/pom.xml
+++ b/member-service-consumer-80/pom.xml
@@ -9,9 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <!-- 该项目继承父项目的 groupId 是 com.springcloud
-     因此这里就不需要再指定 groupId -->
-    <artifactId>member-service-provider-10000</artifactId>
+    <artifactId>member-service-consumer-80</artifactId>
 
     <dependencies>
         <dependency>
@@ -23,24 +21,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid-spring-boot-starter</artifactId>
-            <!-- 这里需要指定版本，因为父项目没指定 -->
-            <version>1.2.8</version>
-        </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -58,7 +38,7 @@
         <dependency>
             <groupId>com.springcloud</groupId>
             <artifactId>e-commerce-center-common-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
