--- a/e-commerce-eureka-server-9001/pom.xml
+++ b/e-commerce-eureka-server-9001/pom.xml
@@ -9,9 +9,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>member-service-consumer-80</artifactId>
+    <artifactId>e-commerce-eureka-server-9001</artifactId>
 
     <dependencies>
+        <!--引入eureka-server 场景启动器starter: 使用版本仲裁-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -38,7 +43,7 @@
         <dependency>
             <groupId>com.springcloud</groupId>
             <artifactId>e-commerce-center-common-api</artifactId>
-            <version>${project.version}</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
