--- a/member-service-consumer-8080/pom.xml
+++ b/member-service-consumer-8080/pom.xml
@@ -9,9 +9,15 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>member-service-consumer-80</artifactId>
+    <artifactId>member-service-consumer-8080</artifactId>
 
     <dependencies>
+        <!-- 引入 sleuth + zipkin -->
+        <!--spring-cloud-starter-zipkin 中包含了 sleuth-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
         <!--引入eureka-client 场景启动器starter: 使用版本仲裁-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
