--- a/member-service-consumer-8080/src/main/resources/application.yml
+++ b/member-service-consumer-8080/src/main/resources/application.yml
@@ -4,6 +4,13 @@ server:
 spring:
   application:
     name: member-service-consumer-8080
+  # 配置 sleuth 和 zipkin
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      # 采样率在 0-1 之间 1表示全部采集
+      probability: 1
 
 # 配置 eureka client
 eureka:
