--- a/member-service-provider-10000/pom.xml
+++ b/member-service-provider-10000/pom.xml
@@ -14,6 +14,12 @@
     <artifactId>member-service-provider-10000</artifactId>
 
     <dependencies>
+        <!-- 引入 sleuth + zipkin -->
+        <!--spring-cloud-starter-zipkin 中包含了 sleuth-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
         <!--引入eureka-client 场景启动器starter: 使用版本仲裁-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
