--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
         <module>member-service-provider-10002</module>
         <module>e-commerce-consumer-openfeign-8080</module>
         <module>e-commerce-gateway-20000</module>
+        <module>member-service-nacos-provider-10004</module>
+        <module>member-service-nacos-provider-10006</module>
     </modules>
 
     <!-- 表明是一个父工程，聚合管理其他模块 -->
