--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>e-commerce-gateway-20000</module>
         <module>member-service-nacos-provider-10004</module>
         <module>member-service-nacos-provider-10006</module>
+        <module>member-service-nacos-consumer-8080</module>
     </modules>
 
     <!-- 表明是一个父工程，聚合管理其他模块 -->
