Study Nacos add e-commerce-nacos-config-client-5000

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>member-service-nacos-provider-10004</module>
         <module>member-service-nacos-provider-10006</module>
         <module>member-service-nacos-consumer-8080</module>
+        <module>e-commerce-nacos-config-client-5000</module>
     </modules>
 
     <!-- 表明是一个父工程，聚合管理其他模块 -->
