--- a/e-commerce-nacos-config-client-5000/src/main/resources/bootstrap.yml
+++ b/e-commerce-nacos-config-client-5000/src/main/resources/bootstrap.yml
@@ -12,6 +12,9 @@ spring:
       config:
         server-addr: localhost:8848 # 配置中心地址
         file-extension: yaml # 指定 yaml 格式的配置
+        group: search # 指定 group，如果不写就是默认 DEFAULT_GROUP
+        #namespace: 66a595bf-aec5-4739-bc09-7a2f1181df9d # alibaba的 namespace ID
+        namespace: c8ca0bc8-dc29-424b-ad78-292b0bf8856d # baidu的 namespace ID
 
 # nacos 配置客户端，会根据配置，找到资源获取配置文件
 # 1.config.server-addr：localhost：8848
